v1.6: CRUD cư dân, cư dân-căn hộ